// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSources /> should render properly with data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        width={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Data source created.
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-35 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-32 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-32 tr {
  background-color: #252525;
}

.emotion-32 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-32 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-32 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-32 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-32 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-32 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-32 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-32 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-32 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-14 {
  display: inline-block;
  color: #191919;
  background-color: #b3b3b3;
  padding: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 8px;
  border-radius: 14px;
  font-family: Roboto Condensed;
}

.emotion-16 {
  position: relative;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover {
  color: #ffffff !important;
  background-color: #808080;
}

<div
    className="emotion-35"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Sources
        : 
        5
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Sources
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-34"
    >
      <div
        className="emotion-33"
      >
        <table
          className="emotion-32"
        >
          <thead>
            <tr>
              <th
                className="emotion-6"
              >
                Name
              </th>
              <th
                className="emotion-6"
              >
                Source Type
              </th>
              <th
                className="emotion-6"
              >
                Path
              </th>
              <th
                className="emotion-6"
              >
                Date Created
              </th>
              <th
                className="emotion-6"
              >
                Date Modified
              </th>
              <th
                className="emotion-6"
              >
                File Types
              </th>
              <th
                className="emotion-6"
              >
                <div
                  className="emotion-12"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                test
              </td>
              <td>
                Amazon Web Service (AWS)
              </td>
              <td>
                s3://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:37:47
              </td>
              <td>
                2020-02-10 01:37:47
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test2
              </td>
              <td>
                Azure
              </td>
              <td>
                azure://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:40:26
              </td>
              <td>
                2020-02-10 01:40:26
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test3
              </td>
              <td>
                Google Cloud Platform (GCP)
              </td>
              <td>
                gs://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:42:23
              </td>
              <td>
                2020-02-10 01:42:23
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test4
              </td>
              <td>
                Unknown
              </td>
              <td>
                ftp://zorroa-dev-data
              </td>
              <td>
                2020-02-10 16:21:18
              </td>
              <td>
                2020-02-10 16:21:18
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test5
              </td>
              <td>
                Google Cloud Platform (GCP)
              </td>
              <td>
                gs://zorroa-dev-data
              </td>
              <td>
                2020-02-10 16:47:39
              </td>
              <td>
                2020-02-10 16:47:39
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with edit success 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#4ac565"
        data-file-name="checkmark.svg"
        width={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Data source edited.
      </div>
    </div>
  </div>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-35 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-32 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-32 tr {
  background-color: #252525;
}

.emotion-32 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-32 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-32 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-32 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-32 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-32 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-32 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-32 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-32 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-14 {
  display: inline-block;
  color: #191919;
  background-color: #b3b3b3;
  padding: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 8px;
  border-radius: 14px;
  font-family: Roboto Condensed;
}

.emotion-16 {
  position: relative;
}

.emotion-15 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-15[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-15:hover {
  color: #ffffff !important;
  background-color: #808080;
}

<div
    className="emotion-35"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Sources
        : 
        5
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Sources
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-34"
    >
      <div
        className="emotion-33"
      >
        <table
          className="emotion-32"
        >
          <thead>
            <tr>
              <th
                className="emotion-6"
              >
                Name
              </th>
              <th
                className="emotion-6"
              >
                Source Type
              </th>
              <th
                className="emotion-6"
              >
                Path
              </th>
              <th
                className="emotion-6"
              >
                Date Created
              </th>
              <th
                className="emotion-6"
              >
                Date Modified
              </th>
              <th
                className="emotion-6"
              >
                File Types
              </th>
              <th
                className="emotion-6"
              >
                <div
                  className="emotion-12"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                test
              </td>
              <td>
                Amazon Web Service (AWS)
              </td>
              <td>
                s3://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:37:47
              </td>
              <td>
                2020-02-10 01:37:47
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test2
              </td>
              <td>
                Azure
              </td>
              <td>
                azure://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:40:26
              </td>
              <td>
                2020-02-10 01:40:26
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test3
              </td>
              <td>
                Google Cloud Platform (GCP)
              </td>
              <td>
                gs://zorroa-dev-data
              </td>
              <td>
                2020-02-10 01:42:23
              </td>
              <td>
                2020-02-10 01:42:23
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test4
              </td>
              <td>
                Unknown
              </td>
              <td>
                ftp://zorroa-dev-data
              </td>
              <td>
                2020-02-10 16:21:18
              </td>
              <td>
                2020-02-10 16:21:18
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                test5
              </td>
              <td>
                Google Cloud Platform (GCP)
              </td>
              <td>
                gs://zorroa-dev-data
              </td>
              <td>
                2020-02-10 16:47:39
              </td>
              <td>
                2020-02-10 16:47:39
              </td>
              <td>
                <span
                  className="emotion-14"
                >
                  jpg
                </span>
                <span
                  className="emotion-14"
                >
                  jpeg
                </span>
              </td>
              <td>
                <div
                  className="emotion-16"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="gear emotion-15"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="gear.svg"
                      width={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<DataSources /> should render properly with no data sources 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Data Sources
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create Data Source
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-19 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-17 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-16 tr {
  background-color: #252525;
}

.emotion-16 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-16 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-16 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-16 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-16 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-16 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-16 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-16 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-16 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  height: 100%;
  pointer-events: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-19"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Sources
        : 
        0
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Sources
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-17"
      >
        <table
          className="emotion-16"
        >
          <thead>
            <tr>
              <th
                className="emotion-6"
              >
                Name
              </th>
              <th
                className="emotion-6"
              >
                Source Type
              </th>
              <th
                className="emotion-6"
              >
                Path
              </th>
              <th
                className="emotion-6"
              >
                Date Created
              </th>
              <th
                className="emotion-6"
              >
                Date Modified
              </th>
              <th
                className="emotion-6"
              >
                File Types
              </th>
              <th
                className="emotion-6"
              >
                <div
                  className="emotion-12"
                >
                  <svg
                    data-file-name="gear.svg"
                    width={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-15"
            >
              <td
                colSpan={7}
              >
                <div
                  className="emotion-14"
                >
                  No data sources
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
